<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round"
        android:elevation="3dp"
        android:orientation="vertical"
        android:paddingStart="@dimen/margin_dialog"
        android:paddingTop="@dimen/margin_dialog"
        android:paddingEnd="@dimen/margin_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pin_guid7" />

            <TextView
                android:id="@+id/numberText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                android:text="123456"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="입니다." />

        </LinearLayout>

        <TextView
            android:id="@+id/textView20"
            style="@style/fundeagi_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/margin_dialog"
            android:text="@string/pin_guid8"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <View
            android:id="@+id/view9"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_dialog"
            android:background="@color/fundaegi_color1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/okButton"
                style="@style/fundeagi_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/margin_dialog"
                android:paddingBottom="@dimen/margin_dialog"
                android:text="@string/dialog_y"
                android:textAlignment="center"
                android:textColor="@color/fundeagi_first1"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/noButton"
                style="@style/fundeagi_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/margin_dialog"
                android:paddingBottom="@dimen/margin_dialog"
                android:text="@string/dialog_n"
                android:textAlignment="center"
                android:textColor="@color/fundeagi_first1"
                android:textSize="16dp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>